Add UsersStatistics (черновой вариант)

--- a/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Diagnostics
 @model uLearn.PersonalStatisticPageModel
 @{
-	ViewBag.Title = "Personal progress";
+	ViewBag.Title = "Personal statistics";
 }
 @Html.Partial("_Sidebar", Model.CoursePageModel)
 
