--- a/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
@@ -2,7 +2,7 @@
 @using uLearn
 @model AnalyticsTablePageModel
 @{
-	ViewBag.Title = "Total progress";
+	ViewBag.Title = "Total statistics";
 }
 
 @Html.Partial("_Sidebar", Model.CoursePageModel)
