--- a/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Diagnostics
-@model uLearn.PersonalStatisticPageModel
+﻿@model uLearn.PersonalStatisticPageModel
 @{
 	ViewBag.Title = "Personal statistics";
 }
@@ -20,19 +19,21 @@
 					</thead>
 					<tbody>
 						@{
-							int counter = -1;
-							foreach (var info in Model.PersonalStatistics)
+							foreach (var stats in Model.PersonalStatistics)
 							{
-								var stats = info.Value;
-								Debug.Assert(stats != null);
-								counter++;
 								<tr>
-									<td data-sort-value=@(counter + 1000)>@Html.ActionLink(info.Key, "Slide", "Course", new { courseId = Model.CoursePageModel.Course.Id, slideIndex = counter }, null)</td>
-									<td data-sort-value="@(info.Value.IsVisited ? 1 : 0)" class="analytics @(info.Value.IsVisited ? "visited" : "not-visited")"></td>
+									<td data-sort-value=@(stats.SlideIndex)>
+										@Html.ActionLink(
+											stats.UnitName + ": " + stats.SlideTitle, 
+											"Slide", "Course", 
+											new { courseId = Model.CoursePageModel.Course.Id, slideIndex = stats.SlideIndex }, 
+											null)
+									</td>
+									<td data-sort-value="@(stats.IsVisited ? 1 : 0)" class="analytics @(stats.IsVisited ? "visited" : "not-visited")"></td>
 									<td 
 										data-sort-value="@(stats.IsSolved ? 1 : stats.IsExercise ? 0 : 2)" 
 										class="analytics @(stats.IsSolved? "solved" : stats.IsExercise ? "not-solved" : "")"></td>
-									<td>@(info.Value.UserMark ?? "")</td>
+									<td>@(stats.UserMark ?? "")</td>
 								</tr>
 							}
 						}
