--- a/src/uLearn.Web/Content/tablesorter.css
+++ b/src/uLearn.Web/Content/tablesorter.css
@@ -33,6 +33,12 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 background-color: #8dbdd8;
 }
 
+.headerSortUp:after {
+    content:" ↑";
+}
+.headerSortDown:after {
+    content:" ↓";
+}
 .analytics.not-visited {
     background-color: lightcoral
 }
