--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -165,12 +165,16 @@ a.nav-arrow:hover {
     list-style-type: none;
     border-bottom: 1px solid #eee;
     padding: 0.5em 0 0.5em 2em;
+    cursor: pointer;
+    color:#428bca;
 }
 
     .slide-list-item.selected {
         background-color: #f5f5f5;
         font-weight: bolder;
         list-style-type: none;
+        cursor: pointer;
+        color:#428bca;
     }
 
 .side-bar {
