--- a/src/uLearn.Web/Views/Shared/_Sidebar.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Sidebar.cshtml
@@ -1,43 +1,39 @@
 ﻿@model uLearn.CoursePageModel
 <ul class="side-bar units-list">
 	@{
-		int index = 0;
-		int groupNumber = 0;
-		string previousName = "";
-		foreach (var unit in Model.Course.Slides.GroupBy(z => z.Info.UnitName))
-		{
-			var collapseOption = unit.First().Info.UnitName == Model.Slide.Info.UnitName ? "collapse in" : "collapse";
-			var currentUnit = unit.First().Info.UnitName;
-			if (previousName != currentUnit)
-			{
-				previousName = currentUnit;
-				groupNumber++;
-			}
-			<li class="units-list-item">
-				<a data-toggle="collapse" href=@("#N"+groupNumber) class="units-list-item-text">
-					@currentUnit
-				</a>
-				<ul id=@("N"+groupNumber) class="slides-list @collapseOption">
-					@for (; index < Model.Course.Slides.Length; index++)
-					{
-						var slide = Model.Course.Slides[index];
-						if (slide.Info.UnitName != currentUnit)
-						{
-							break;
-						}
-						var selectedSlide = index == Model.SlideIndex;
-						<li class="slide-list-item @(selectedSlide ? "selected" : "")">@Html.ActionLink(slide.Title, "Slide", "Course", new { courseId = Model.Course.Id, slideIndex = index }, null)</li>
-					}
-				</ul>
-			</li>
-		}
-		<li class="units-list-item units-list-item-text">@Html.ActionLink("Total statistics", "TotalStatistics", "Analytics", new { courseId = Model.Course.Id, slideIndex = 0 }, null)</li>
-		<li class="units-list-item units-list-item-text">@Html.ActionLink("Users statistics", "UsersStatistics", "Analytics", new { courseId = Model.Course.Id, slideIndex = 0 }, null)</li>
-		<li class="units-list-item units-list-item-text">@Html.ActionLink("Personal statistics", "PersonalStatistics", "Analytics", new { courseId = Model.Course.Id, slideIndex = 0 }, null)</li>
-
+	    int index = 0;
+	    int groupNumber = 0;
+	    string previousName = "";
+	    foreach (var unit in Model.Course.Slides.GroupBy(z => z.Info.UnitName))
+	    {
+	        var collapseOption = unit.First().Info.UnitName == Model.Slide.Info.UnitName ? "collapse in" : "collapse";
+	        var currentUnit = unit.First().Info.UnitName;
+	        if (previousName != currentUnit)
+	        {
+	            previousName = currentUnit;
+	            groupNumber++;
+	        }
+	        <li class="units-list-item">
+	            <a data-toggle="collapse" href=@("#N" + groupNumber) class="units-list-item-text">
+	                @currentUnit
+	            </a>
+	            <ul id=@("N" + groupNumber) class="slides-list @collapseOption">
+	                @for (; index < Model.Course.Slides.Length; index++)
+	                {
+	                    var slide = Model.Course.Slides[index];
+	                    if (slide.Info.UnitName != currentUnit)
+	                    {
+	                        break;
+	                    }
+	                    var selectedSlide = index == Model.SlideIndex;
+	                    var url = Url.Action("Slide", "Course", new {courseId = Model.Course.Id, slideIndex = index});
+	                    <li class="slide-list-item @(selectedSlide ? "selected" : "")" onclick="window.location.href = '@url'">@slide.Title</li>
+	                }
+	            </ul>
+	        </li>
+	    }
+	    <li class="units-list-item units-list-item-text">@Html.ActionLink("Total statistics", "TotalStatistics", "Analytics", new {courseId = Model.Course.Id, slideIndex = 0}, null)</li>
+	    <li class="units-list-item units-list-item-text">@Html.ActionLink("Users statistics", "UsersStatistics", "Analytics", new {courseId = Model.Course.Id, slideIndex = 0}, null)</li>
+	    <li class="units-list-item units-list-item-text">@Html.ActionLink("Personal statistics", "PersonalStatistics", "Analytics", new {courseId = Model.Course.Id, slideIndex = 0}, null)</li>
 	}
 </ul>
-
-
-
-
