--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -102,11 +102,9 @@
 
 @section scripts{
 	@Scripts.Render("~/slide-js")
-	<script src="~/Scripts/slide-onload-visit.js"></script>
-	<script id="VisitSlideUrl" data-url='@Url.Action("VisitSlide", new { courseId = Model.Course.Id, slideId = Model.Slide.Id })'>smbVisit()</script>
 	<script src="~/Scripts/slide-stats.js"></script>
 	<script>
-		giveMark();
+		FillRate('@Model.Rate');
 	</script>
 }
 
