prepare db for new info in navBar

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -257,3 +257,8 @@ table.diff tbody th{
 	text-align: right;
 	vertical-align: middle;
 }
+
+.like-left-location {
+    margin-right: 10px;
+    float: left;
+}
