beautiful nav-bar

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -262,3 +262,21 @@ table.diff tbody th{
     margin-right: 10px;
     float: left;
 }
+
+.navbar-label {
+    float: left;
+    margin-right: 5px;
+    margin-top: 7px;
+}
+
+.navbar-label-default {
+    color: lightgray;
+}
+
+.navbar-label-success {
+    color: lightgreen;
+}
+
+.navbar-label-danger {
+    color: lightcoral;
+}
