--- a/src/uLearn.Web/Views/Course/_RatesBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_RatesBar.cshtml
@@ -1,24 +1,23 @@
 ﻿@model uLearn.CoursePageModel
-<form class="rate-buttons" style="margin-top: 10px;">
+<form style="width:100%" class="rate-buttons" style="margin-top: 10px;">
 	<div id="ratesBar" data-url="@Url.Action("ApplyRate", new{ courseId = Model.Course.Id, slideId = Model.Slide.Id})"></div>
-	Оцените материал:
-	<div class="btn-group" data-toggle="buttons">
-		<label onclick="handleRate('NotWatched')" class="btn btn-default active">
-			<input id="notwatched" type="radio" name="marks" value="not_watched">
-			Ещё не смотрел
-		</label>
-		<label onclick="handleRate('Good')" class="btn btn-default btn-hover" data-hover-class="btn-success">
+	<div style="width:100%" class="btn-group" data-toggle="buttons">
+	    <label style="width:33%" onclick="handleRate('Good')" class="btn btn-default" data-hover-class="btn-success">
 			<input id="good" type="radio" name="marks" value="good" checked>
 			Хорошо
 		</label>
-		<label onclick="handleRate('NotUnderstand')" class="btn btn-default btn-hover" data-hover-class="btn-danger">
+		<label style="width:33%" onclick="handleRate('NotUnderstand')" class="btn btn-default" data-hover-class="btn-danger">
 			<input id="notunderstand" type="radio" name="marks" value="notunderstand">
 			Непонятно
 		</label>
-		<label onclick="handleRate('Trivial')" class="btn btn-default btn-hover" data-hover-class="btn-info">
+		<label style="width:34%" onclick="handleRate('Trivial')" class="btn btn-default" data-hover-class="btn-info">
 			<input id="trivial" type="radio" name="marks" value="trivial">
 			Тривиально
 		</label>
 	</div>
 	<div class="clearfix"></div>
 </form>
+<label hidden style="display:none" onclick="handleRate('NotWatched')" class="btn btn-default active">
+	<input id="notwatched" type="radio" name="marks" value="not_watched">
+	Ещё не смотрел
+</label>
