--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -256,6 +256,7 @@ table.diff tbody th {
     padding: 0 3px 0 0;
     text-align: right;
     vertical-align: middle;
+}
 
 .like-left-location {
     margin-right: 10px;
