--- a/src/uLearn.Web/Content/bounce.css
+++ b/src/uLearn.Web/Content/bounce.css
@@ -1,67 +1,4 @@
-﻿table.tablesorter {
-	font-family: arial;
-	margin: 10px 0pt 15px;
-	font-size: 8pt;
-	width: 100%;
-	text-align: left;
-	border: 1px solid #3D3D3D;
-	margin-top: 30px;
-}
-
-	table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-		background-color: #e6EEEE;
-		border: 1px solid #3D3D3D;
-		font-size: 8pt;
-		padding: 4px;
-	}
-
-	table.tablesorter thead tr .header {
-		background-repeat: no-repeat;
-		background-position: center right;
-		word-spacing: 2px;
-		cursor: pointer;
-	}
-
-	table.tablesorter tbody td {
-		color: #3D3D3D;
-		border: 1px solid #3D3D3D;
-		padding: 4px;
-		vertical-align: top;
-	}
-
-	table.tablesorter tbody tr.odd td {
-		background-color: #F0F0F6;
-	}
-
-	table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-		background-color: #8dbdd8;
-	}
-
-	table.tablesorter .headerSortUp:after {
-		content: " ↑";
-	}
-
-	table.tablesorter .headerSortDown:after {
-		content: " ↓";
-	}
-
-.analytics.not-visited {
-	background-color: lightcoral;
-}
-
-.analytics.visited {
-	background-color: lightgreen;
-}
-
-.analytics.not-solved {
-	background-color: lightcoral;
-}
-
-.analytics.solved {
-	background-color: lightgreen;
-}
-
-.bounce-effect {	
+﻿.bounce-effect {	
 	-webkit-animation: bounce 800ms ease-out;
 	-moz-animation: bounce 800ms ease-out;
 	-o-animation: bounce 800ms ease-out;
@@ -125,11 +62,11 @@
 @-moz-keyframes bounce {
   0% {
 	-moz-transform:translateY(-100%);
-    opacity: 1;
+    opacity: 0;
   }
   5% {
   	-moz-transform:translateY(-100%);
-    opacity: 1;
+    opacity: 0;
   }
   15% {
   	-moz-transform:translateY(0);
@@ -177,11 +114,11 @@
 @-o-keyframes bounce {
   0% {
 	-o-transform:translateY(-100%);
-    opacity: 1;
+    opacity: 0;
   }
   5% {
   	-o-transform:translateY(-100%);
-    opacity: 1;
+    opacity: 0;
   }
   15% {
   	-o-transform:translateY(0);
@@ -229,11 +166,11 @@
 @keyframes bounce {
   0% {
 	transform:translateY(-100%);
-    opacity: 1;
+    opacity: 0;
   }
   5% {
   	transform:translateY(-100%);
-    opacity: 1;
+    opacity: 0;
   }
   15% {
   	transform:translateY(0);
