--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -28,45 +28,7 @@
 				@{ var slide = Model.Slide as ExerciseSlide; }
 				@if (slide != null)
 				{
-					<textarea id="secretCodeExercise" class='hide'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
-					if (Model.IsPassedTask)
-					{
-					    <span id="suc" class="label label-success">Success</span>
-					    <a class="label label-success" href="@Url.Action("AcceptedSolutions", new { courseId = Model.Course.Id, slideIndex = Model.SlideIndex })">show another solution</a>
-						<a class="label label-default clear-code" onclick="cleanUserCode()">ClearCode</a>
-						<textarea class='code code-exercise'>@Model.LatestAcceptedSolution</textarea>
-					}
-					else
-					{
-						<a class="label label-default clear-code" onclick="cleanUserCode()">ClearCode</a>
-						<textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
-					}
-					<div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
-					<script>
-						function cleanUserCode() {
-							var $secretCodeExercise = $('#secretCodeExercise');
-							$('.code-exercise')[0].codeMirrorEditor.setValue($secretCodeExercise.text());
-						}
-					</script>
-					@*
-						<a href="#" onclick="updateVerdict(true, 'Успех!', 'some right answer', false)">OK</a>
-						<a href="#" onclick="updateVerdict(false, 'Compilation error', 'details', true)">CompilationError</a>
-						<a href="#" onclick="updateVerdict(false, 'Неверный ответ', 'Bullshit', false)">WrongAnswer</a>
-					*@
-					@Html.Partial("_ExerciseHints", Model)
-					@Html.Partial("_AskBar")
-					<button type="button" class="run-solution-button btn btn-primary btn-lg no-rounds"
-							data-url="@Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex})">
-						RUN
-					</button>
-					<div class="run-verdict clearfix"></div>
-					<div class="after-run-block">
-						<div class="actual-output">
-							<div class="output-label">Вывод вашей программы:</div>
-							<pre class="no-rounds"><code class="actual-output-content"></code></pre>
-						</div>
-						<div class="diff-table"></div>
-					</div>
+					@Html.Partial("_SolutionControl",Model);
 				}
 				else
 				{
