--- a/src/uLearn.Web/Views/Course/_SlideNavigation.cshtml
+++ b/src/uLearn.Web/Views/Course/_SlideNavigation.cshtml
@@ -2,7 +2,7 @@
 
 <div class="btn-group" style="width:100%" id="nav_arrows" data-hasnext="@(Model.HasNextSlide?"true":"")" data-hasprev="@(Model.HasPrevSlide?"true":"")">
 	<a class="btn btn-default btn-hover" style="width:50%" id="prev_slide_button" href="@Url.Action("Slide", new {courseId = Model.Course.Id, slideIndex = Model.PrevSlideIndex})"><i class="glyphicon glyphicon-chevron-left"></i></a>
-	<a class="nav-arrow nav-right" id="next_solutions_button" href="@Url.Action("AcceptedSolutions", new { courseId = Model.Course.Id, slideIndex = Model.SlideIndex })"><i class="glyphicon glyphicon-chevron-right"></i></a>
+	<a class="btn btn-default btn-hover block-next" style="width:50%" id="next_solutions_button" href="@Url.Action("AcceptedSolutions", new { courseId = Model.Course.Id, slideIndex = Model.SlideIndex })"><i class="glyphicon glyphicon-chevron-right"></i></a>
     <span style="padding:0 0 0 0; height: 34px;" class="nav-arrow nav-left" id="no_prev_slide">Листалка тут → </span>
     <a class="btn btn-default btn-hover block-next" style="width:50%" id="next_slide_button" href="@Url.Action("Slide", new {courseId = Model.Course.Id, slideIndex = Model.NextSlideIndex})"><i class="glyphicon glyphicon-chevron-right"></i></a>
 	<span style="padding:0 0 0 0; height: 34px;" class=" nav-arrow nav-right" id="no_next_slide">Конец!</span>
