--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -11,14 +11,14 @@
 		<div class="col-md-6">
 			<h2>Основы программирования на C#</h2>
 			<p>
-				14 недель. тра-ля-ля. На основе материала... Требуемые знания, содержание курса, для кого и зачем.
+				[В процессе разработки]
 			</p>
 			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, null)</p>
 		</div>
 		<div class="col-md-6">
 			<h2>Практикум по LINQ</h2>
 			<p>
-				Множество практических примеров использования Linq запросов. Бла-бла-бла.
+				Множество практических примеров использования Linq запросов.
 			</p>
 			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, null)</p>
 		</div>
